#2 feat: termina a estilização do header do sistema

--- a/components/header-telas.html
+++ b/components/header-telas.html
@@ -1,11 +1,17 @@
 <header>
     <div class="container-header-component">
-        <ul>
-            <li><a href="../../index.html">Inicío</a></li>
-            <li><a href="../login/index.html">Login</a></li>
-            <li><a href="../notificacao/index.html">Notificação</a></li>
-            <li><a href="../perfil/index.html">Perfil</a></li>
-        </ul>
+        <div class="foto-de-perfil">
+            <img src="../../assets/images/igor-imagem.png" alt="Foto de perfil">
+        </div>
+
+        <div class="logo-infoweg">
+            <h3><span>info</span>WEG</h3>
+        </div>
+
+        <div class="icones-navegacao">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#005691" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-bell-icon lucide-bell"><path d="M10.268 21a2 2 0 0 0 3.464 0"/><path d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#005691" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu-icon lucide-menu"><path d="M4 12h16"/><path d="M4 18h16"/><path d="M4 6h16"/></svg>
+        </div>
     </div>
 </header>
 
