--- a/pages/alterar_senha/style.css
+++ b/pages/alterar_senha/style.css
@@ -14,3 +14,69 @@
     --font-kumbh: "Kumbh Sans", sans-serif;
     --font-plus:"Plus Jakarta Sans", sans-serif;
 }
+
+.seta-voltar img{
+    margin: 20px;
+    width: 20px;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.tela-login{
+    margin-top: 4rem;
+    width: 80%;
+}
+
+.section-title{
+    color: var(--cor-primaria);
+}
+.section-title h1{
+    display: flex;
+    justify-content: center;  
+    align-items: center;
+}
+
+.bold{
+    font-size: 55px;
+    font-weight: 700;
+    font-family: var(--font-kumbh);
+}
+
+
+.light{
+    font-size: 50px;
+    font-weight: 300;
+    opacity: 0.8;
+    font-family: var(--font-kumbh);
+}
+
+.section-title h2{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 800;
+    font-family: var(--font-plus);
+    margin-top: 3rem;
+}
+
+
+form{
+    border: 1px solid #023A67;
+    border-radius: 30px;
+}
+.formulario{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+form input{
+    display: flex;
+    
+    width: 60%;
+}
+
