--- a/pages/alterar_senha/style.css
+++ b/pages/alterar_senha/style.css
@@ -26,13 +26,14 @@
     align-items: center;
 }
 
-.tela-login{
+.alterar-senha{
     margin-top: 4rem;
-    width: 80%;
+    width: 90%;
 }
 
 .section-title{
     color: var(--cor-primaria);
+    margin-bottom: 3rem;
 }
 .section-title h1{
     display: flex;
@@ -63,20 +64,76 @@
     margin-top: 3rem;
 }
 
+form h1{
+margin-top: 1.5rem;
+margin-bottom: 1rem;
+font-size: 20px;
+font-family: var(--font-plus);
+font-weight: 800;
+display: flex;
+color: var(--cor-primaria);
+justify-content: center;
+}
 
 form{
     border: 1px solid #023A67;
     border-radius: 30px;
 }
+
 .formulario{
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    width: 100%;
+    align-items: center;
+    margin: 0 auto;
 }
 
-form input{
-    display: flex;
-    
-    width: 60%;
+.formulario input{
+    border: 1px solid;
+    color: #023A6780;
+    border-radius: 45px;
+    padding: 0.8rem;
+    width: 72%;
+    opacity: 0.5;
+    margin-bottom: 1rem;
+    font-family: var(--font-plus);
+    font-size: 11px;
 }
+
+.formulario a{
+   display: flex;
+   text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    background-color: #005691;
+    border: none;
+    color: white;
+    border-radius: 45px;
+    padding: 0.6rem;
+    width: 75%;
+    margin-bottom: 2.5rem;
+    font-size: 14px;
+    font-family: var(--font-plus);
+}
+
+.algo-errado{
+    display: flex;
+    justify-content: center;
+    margin-top: 10rem;
+    font-family: "Noto Sans Arabic", sans-serif;
+    font-size: 15px;
+    color: var(--cor-primaria);
+}
+
+.algo-errado a{
+    color: var(--cor-primaria);
+    font-weight: 600;
+}
+
+
+
+
+
+
+
 
