--- a/pages/alterar_senha/style.css
+++ b/pages/alterar_senha/style.css
@@ -6,6 +6,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 
@@ -76,8 +77,9 @@ justify-content: center;
 }
 
 form{
-    border: 1px solid #023A67;
+    border: 1px solid rgba(2, 58, 103, 0.3);
     border-radius: 30px;
+    padding: 1rem;
 }
 
 .formulario{
@@ -93,7 +95,7 @@ form{
     color: #023A6780;
     border-radius: 45px;
     padding: 0.8rem;
-    width: 72%;
+    width: 100%;
     opacity: 0.5;
     margin-bottom: 1rem;
     font-family: var(--font-plus);
@@ -110,7 +112,7 @@ form{
     color: white;
     border-radius: 45px;
     padding: 0.6rem;
-    width: 75%;
+    width: 100%;
     margin-bottom: 2.5rem;
     font-size: 14px;
     font-family: var(--font-plus);
@@ -121,13 +123,13 @@ form{
     justify-content: center;
     margin-top: 10rem;
     font-family: "Noto Sans Arabic", sans-serif;
-    font-size: 15px;
+    font-size: 12px;
     color: var(--cor-primaria);
 }
 
 .algo-errado a{
     color: var(--cor-primaria);
-    font-weight: 600;
+    font-weight: 700;
 }
 
 
