--- a/pages/esqueci_senha/style.css
+++ b/pages/esqueci_senha/style.css
@@ -144,3 +144,18 @@
     width: 100%;
     padding: 0.5rem 0rem;
 }
+
+.algo-errado{
+    display: flex;
+    justify-content: center;
+    margin-top: 10rem;
+    font-size: 15px;
+    color: var(--cor-primaria);
+    font-family: var(--font-plus);
+}
+
+.algo-errado a{
+    color: var(--cor-primaria);
+    font-weight: 600;
+    font-family: var(--font-plus);
+}
