--- a/pages/esqueci_senha/style-alterar-senha.css
+++ b/pages/esqueci_senha/style-alterar-senha.css
@@ -89,6 +89,7 @@ form{
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+    margin-top: 1.5rem;
 }
 
 .formulario input{
@@ -101,6 +102,7 @@ form{
     margin-bottom: 1rem;
     font-family: var(--font-plus);
     font-size: 11px;
+    margin-bottom: 1.5rem;
 }
 
 .formulario a{
@@ -122,7 +124,7 @@ form{
 .algo-errado{
     display: flex;
     justify-content: center;
-    margin-top: 12rem;
+    margin-top: 15rem;
     font-size: 15px;
     color: var(--cor-primaria);
     font-family: var(--font-plus);
@@ -133,6 +135,8 @@ form{
     font-weight: 600;
     font-family: var(--font-plus);
 }
+
+
 
 
 
