#36 fix:  conserta formulários de login

--- a/pages/alterar_senha/style.css
+++ b/pages/alterar_senha/style.css
@@ -103,7 +103,7 @@ form{
     font-size: 11px;
 }
 
-.formulario a{
+.formulario button{
    display: flex;
    text-decoration: none;
     justify-content: center;
