--- a/pages/esqueci_senha/style-alterar-senha.css
+++ b/pages/esqueci_senha/style-alterar-senha.css
@@ -105,7 +105,7 @@ form{
     margin-bottom: 1.5rem;
 }
 
-.formulario a{
+.formulario button{
    display: flex;
    text-decoration: none;
     justify-content: center;
