--- a/pages/login/style.css
+++ b/pages/login/style.css
@@ -44,6 +44,13 @@
     align-items: center;
 }
 
+#usuario-incorreto{
+    font-family: var(--font-plus);
+    color: red;
+    margin-top: 0.5rem;
+    font-size: 14px;
+    display: none;
+}
 
 
 
@@ -154,6 +161,7 @@ input::placeholder {
     font-family: var(--font-plus);
     font-size: 14px;
     text-decoration: none;
+    width: 100%;
 }
 
 
