--- a/pages/bem_vindos/style.css
+++ b/pages/bem_vindos/style.css
@@ -65,6 +65,7 @@ h1 {
     display: flex;
     flex-direction: row;
     gap: 3rem;
+    margin-top: 3rem;
 }
 
 #links a{
@@ -73,4 +74,7 @@ h1 {
     padding: 1rem 2rem;
     text-decoration: none;
     font-size: 18px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
+    border: 0;
 }
