--- a/pages/login/style.css
+++ b/pages/login/style.css
@@ -259,7 +259,7 @@ input::placeholder {
 }
 .spinner {
     border: 6px solid #f3f3f3;
-    border-top: 6px solid #3498db;
+    border-top: 6px solid var(--cor-primaria);
     border-radius: 50%;
     width: 50px;
     height: 50px;
