--- a/pages/bem_vindos/style.css
+++ b/pages/bem_vindos/style.css
@@ -66,6 +66,7 @@ h2 {
     flex-direction: row;
     gap: 3rem;
     margin-top: 3rem;
+    padding: 1rem 2rem;
 }
 
 #links a{
@@ -77,7 +78,6 @@ h2 {
     border-radius: 8px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.425);
     border: 0;
-    width: 200px;
 }
 
 #logout-link{
