--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -7,6 +7,7 @@
     color: #005691;
     font-weight: 600;
     font-family: "Kumbh Sans", sans-serif;
+    margin-top: 1rem;
 }
 
 #h1PaginaInicialTeste{
