--- a/style.css
+++ b/style.css
@@ -83,10 +83,6 @@ body {
     border-bottom: 1px solid #f0f0f0;   
 }
 
-.stories-container::-webkit-scrollbar {
-    display: none;
-}
-
 .story-wrapper {
     display: flex;
     flex-direction: column;
@@ -141,9 +137,6 @@ body {
     padding: 15px 0;
 }
 
-.post:last-child {
-    border-bottom: none;
-}
 
 .post-info {
     flex: 1;
@@ -172,8 +165,9 @@ body {
 }
 
 .post-image {
-    width: 100px;
-    height: 75px;
+    align-self: center;
+    width: 115px;
+    height: 72px;
     border-radius: 12px;
     object-fit: cover;
     flex-shrink: 0;
