--- a/pages/login/style.css
+++ b/pages/login/style.css
@@ -106,7 +106,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 2rem;
+    margin-top: 5rem;
     width: 100%;
 }
 
@@ -273,3 +273,24 @@ input::placeholder {
 
 
 
+@media (min-width: 768px) {
+    .container{
+        width: 80% !important;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-self: center;
+    }
+}
+
+
+
+@media (min-width: 1024px) {
+    .container{
+        width: 30% !important;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-self: center;
+    }
+}
