--- a/pages/notificacao/style.css
+++ b/pages/notificacao/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    max-width: 100%;
 }
 
 :root{
@@ -19,6 +20,7 @@ body {
 .container {
     width: 100vw;
     max-width: 100vw;
+    max-width: 100%;
     min-width: 100vw;
     margin: 0;
     background: #fff;
